earring design completed

--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -35,29 +35,9 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_couple"
+            android:id="@+id/btn_beautiful"
             android:textColor="@color/colorWhite"
-            android:text="Couple Ring Designs"
-            android:background="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
-            android:layout_marginStart="@dimen/spacing_medium"
-            android:layout_marginEnd="@dimen/spacing_medium"
-            android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_diamond"
-            android:textColor="@color/colorWhite"
-            android:text="Diamond Ring Designs"
-            android:background="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
-            android:layout_marginStart="@dimen/spacing_medium"
-            android:layout_marginEnd="@dimen/spacing_medium"
-            android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_engagement"
-            android:textColor="@color/colorWhite"
-            android:text="Engagement Ring Designs"
+            android:text="Beautiful Earring Designs"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -67,7 +47,7 @@
             android:layout_marginBottom="@dimen/spacing_medium"
             android:id="@+id/btn_jewellery"
             android:textColor="@color/colorWhite"
-            android:text="Jewelery Ring Designs"
+            android:text="Jewelry Earring Designs"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -75,9 +55,9 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_new"
+            android:id="@+id/btn_latest"
             android:textColor="@color/colorWhite"
-            android:text="New Ring Designs"
+            android:text="Latest Earring Designs"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -85,9 +65,9 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_promise"
+            android:id="@+id/btn_modern"
             android:textColor="@color/colorWhite"
-            android:text="Promise Ring Designs"
+            android:text="Modern Earring Designs"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -95,9 +75,9 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_unique"
+            android:id="@+id/btn_diamond"
             android:textColor="@color/colorWhite"
-            android:text="Unique Ring Designs"
+            android:text="Diamond Earring Designs"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -105,9 +85,29 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_wedding"
+            android:id="@+id/btn_silk"
             android:textColor="@color/colorWhite"
-            android:text="Wedding Ring Designs"
+            android:text="Silk Threaded Earring Designs"
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:layout_marginStart="@dimen/spacing_medium"
+            android:layout_marginEnd="@dimen/spacing_medium"
+            android:layout_marginBottom="@dimen/spacing_medium"
+            android:id="@+id/btn_trendy"
+            android:textColor="@color/colorWhite"
+            android:text="Trendy Earring Designs"
+            android:background="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <Button
+            android:layout_marginStart="@dimen/spacing_medium"
+            android:layout_marginEnd="@dimen/spacing_medium"
+            android:layout_marginBottom="@dimen/spacing_medium"
+            android:id="@+id/btn_women"
+            android:textColor="@color/colorWhite"
+            android:text="Women Silver Earring Designs"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
