necessary changes for necklace designs

--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -35,7 +35,7 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_beautiful"
+            android:id="@+id/btn_category1"
             android:textColor="@color/colorWhite"
             android:text="Beautiful Earring Designs"
             android:background="@color/colorPrimary"
@@ -45,7 +45,7 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_jewellery"
+            android:id="@+id/btn_category2"
             android:textColor="@color/colorWhite"
             android:text="Jewelry Earring Designs"
             android:background="@color/colorPrimary"
@@ -55,7 +55,7 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_latest"
+            android:id="@+id/btn_category3"
             android:textColor="@color/colorWhite"
             android:text="Latest Earring Designs"
             android:background="@color/colorPrimary"
@@ -65,7 +65,7 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_modern"
+            android:id="@+id/btn_category4"
             android:textColor="@color/colorWhite"
             android:text="Modern Earring Designs"
             android:background="@color/colorPrimary"
@@ -75,7 +75,7 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_diamond"
+            android:id="@+id/btn_category5"
             android:textColor="@color/colorWhite"
             android:text="Diamond Earring Designs"
             android:background="@color/colorPrimary"
@@ -85,7 +85,7 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_silk"
+            android:id="@+id/btn_category6"
             android:textColor="@color/colorWhite"
             android:text="Silk Threaded Earring Designs"
             android:background="@color/colorPrimary"
@@ -95,8 +95,9 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_trendy"
+            android:id="@+id/btn_category7"
             android:textColor="@color/colorWhite"
+            android:visibility="gone"
             android:text="Trendy Earring Designs"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
@@ -105,8 +106,9 @@
             android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
-            android:id="@+id/btn_women"
+            android:id="@+id/btn_category8"
             android:textColor="@color/colorWhite"
+            android:visibility="gone"
             android:text="Women Silver Earring Designs"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
