--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -77,6 +77,7 @@
             android:layout_marginBottom="@dimen/spacing_medium"
             android:id="@+id/btn_category5"
             android:textColor="@color/colorWhite"
+            android:visibility="gone"
             android:text="Diamond Earring Designs"
             android:background="@color/colorPrimary"
             android:layout_width="match_parent"
@@ -86,6 +87,7 @@
             android:layout_marginEnd="@dimen/spacing_medium"
             android:layout_marginBottom="@dimen/spacing_medium"
             android:id="@+id/btn_category6"
+            android:visibility="gone"
             android:textColor="@color/colorWhite"
             android:text="Silk Threaded Earring Designs"
             android:background="@color/colorPrimary"
