--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
                         android:layout_weight="8"
                         android:scaleType="centerCrop"
                         android:background="@color/colorLightGrey2"
-                        android:src="@drawable/earing_cover"
+                        android:src="@drawable/henna_cover"
                         android:layout_height="0dp" />
                     <TextView
                         android:layout_width="wrap_content"
